WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177548
[Fetch API] Cloning an opaque response should not assert
https://bugs.webkit.org/show_bug.cgi?id=177548
Summary
[Fetch API] Cloning an opaque response should not assert
youenn fablet
Reported
2017-09-27 10:11:18 PDT
It is valid to clone an opaque response
Attachments
Patch
(4.90 KB, patch)
2017-09-27 10:12 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-09-27 10:12:58 PDT
Created
attachment 321970
[details]
Patch
WebKit Commit Bot
Comment 2
2017-09-27 11:01:32 PDT
Comment on
attachment 321970
[details]
Patch Clearing flags on attachment: 321970 Committed
r222561
: <
http://trac.webkit.org/changeset/222561
>
WebKit Commit Bot
Comment 3
2017-09-27 11:01:34 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2017-09-27 12:15:45 PDT
<
rdar://problem/34692885
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug