[Fetch API] Cloning an opaque response should not assert https://bugs.webkit.org/show_bug.cgi?id=177548

Patch by Youenn Fablet <youenn@apple.com> on 2017-09-27
Reviewed by Sam Weinig.

Source/WebCore:

Test: http/wpt/fetch/response-opaque-clone.html

* Modules/fetch/FetchBodyOwner.cpp:
(WebCore::FetchBodyOwner::readableStream): Returning null if response is opaque.
* Modules/fetch/FetchResponse.cpp:
(WebCore::FetchResponse::clone): Making sure cloned responses keep their opaque state.
(WebCore::FetchResponse::consumeBodyAsStream): Removing assertion as we need to create a stream for cloning.

LayoutTests:

* http/wpt/fetch/response-opaque-clone-expected.txt: Added.
* http/wpt/fetch/response-opaque-clone.html: Added.

Canonical link: https://commits.webkit.org/193850@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222561 268f45cc-cd09-0410-ab3c-d52691b4dbfc